# KTools

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
anko/: build.gradle
anko/src/main/: AndroidManifest.xml
annotations/: build.gradle
aop/: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sample.html
audio/: build.gradle
audio/src/main/: AndroidManifest.xml
buildSrc/: build.gradle
codeiris/: codeIrisExport.json
compiler/: build.gradle
container/: build.gradle
design/: build.gradle
design/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hack/: build.gradle
hybrid/: build.gradle
hybrid/src/main/: AndroidManifest.xml
image/: build.gradle
jetpack/: build.gradle
jetpack/src/main/: AndroidManifest.xml
jni/: CMakeLists.txt  build.gradle
jni/src/androidTest/java/com/jiangkang/jni/: ExampleInstrumentedTest.java
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: basic.cpp  basic.h  hello-lib.cpp
jni/src/main/java/com/jiangkang/jni/: JNIActivity.kt  JniBasic.java
jni/src/main/res/layout/: activity_jni.xml
jni/src/test/java/com/jiangkang/jni/: ExampleUnitTest.java
kanimation/: build.gradle
kdownloader/: build.gradle
kflutter/: README.md  pubspec.yaml
kflutter/lib/: main.dart
klint/: build.gradle
media/: build.gradle
plugins/: file.gradle  quality.gradle
quality/: checkstyle.xml
requests/: build.gradle
requests/src/main/: AndroidManifest.xml
rn/: build.gradle
rn/src/main/: AndroidManifest.xml
storage/: build.gradle
tools/: build.gradle  proguard-rules.pro
tools/src/main/: AndroidManifest.xml
video/: build.gradle
video/src/main/: AndroidManifest.xml
weex/: build.gradle
weex/src/main/: AndroidManifest.xml
widget/: build.gradle
widget/src/main/: AndroidManifest.xml
(+413 files in other folders)
